CSS fix for list overflow

--- a/src/screens/ExpensesScreen.css
+++ b/src/screens/ExpensesScreen.css
@@ -16,7 +16,7 @@
 
 .expenses-screen-container .line2 {display: flex; flex: 1; flex-direction: row; height: 75vh;}
 .expenses-screen-container .line2 .left {display: flex; flex-direction: column; flex: 1; max-width: 60%; }
-.expenses-screen-container .line2 .right {display: flex; flex-direction: column; flex: 1; max-width: 40%; }
+.expenses-screen-container .line2 .right {display: flex; flex-direction: row; flex: 1; max-width: 40%; }
 
 .expenses-screen-container .line2 .left .line1 { display: flex; height: 20%; flex-direction: row; }
 .expenses-screen-container .line2 .left .line2 { display: flex; height: 80%; flex-direction: column; }
