--- a/src/widgets/ExpensesListWidget.css
+++ b/src/widgets/ExpensesListWidget.css
@@ -1,6 +1,6 @@
 
 .expenses-list-widget {
-  display: flex; flex-direction: column; flex: 1;
+  display: flex; flex-direction: row; flex: 1;
   padding: 12px;
   background-color: #5ddef4;
   border-radius: 5px;
